#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-dsx-exchange-consumer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-dsx-exchange-consumer"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { features = ["serde"], workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
moka = { workspace = true }
humantime-serde = { workspace = true }
opentelemetry = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
url = { workspace = true }

# [local-dependencies]
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc" }
carbide-secrets = { path = "../secrets" }
carbide-uuid = { path = "../uuid" }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
logfmt = { path = "../logfmt" }
metrics-endpoint = { path = "../metrics-endpoint" }
mqttea = { path = "../mqttea" }

[build-dependencies]
carbide-version = { path = "../version" }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }

[lints]
workspace = true
