#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-health"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-hw-health
name = "forge-hw-health"
path = "src/main.rs"

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
futures = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true }
mac_address = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["query", "json"] }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
nv-redfish = { workspace = true, features = [
  "bmc-http",
  "chassis",
  "computer-systems",
  "event-service",
  "log-services",
  "managers",
  "memory",
  "power-supplies",
  "processors",
  "sensors",
  "storages",
  "thermal",
  "update-service",
  "resource-status",
] }
rand = { workspace = true }
url = { workspace = true, features = ["serde"] }

# [local-dependencies]
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
carbide-utils = { path = "../utils" }
carbide-uuid = { path = "../uuid" }
logfmt = { path = "../logfmt" }

[build-dependencies]
carbide-version = { path = "../version" }
tonic-prost-build = { workspace = true }

[features]
bench-hooks = []

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "sink_pipeline"
harness = false
required-features = ["bench-hooks"]

[[bench]]
name = "collector_pipeline"
harness = false

[[bench]]
name = "processor_pipeline"
harness = false

[lints]
workspace = true
