[package]
name = "carbide-ipxe-renderer"
version = "0.0.1"
edition.workspace = true
description = "iPXE OS renderer for template-based iPXE script generation"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_ipxe_renderer"

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
