#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "mqttea"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "mqttea"
path = "src/lib.rs"

[dependencies]
tokio = { features = ["full"], workspace = true }
rumqttc = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { features = ["derive"], workspace = true }
clap = { features = ["derive"], workspace = true }
tracing-subscriber = { workspace = true }
chrono = { features = ["serde"], workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { features = ["v4"], workspace = true }

# OAuth2 support
oauth2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
prost-build = { workspace = true }
tokio-test = { workspace = true }

[build-dependencies]
prost-build = "0.14"
