#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-network"
version = "0.0.0"
edition.workspace = true
description = "Common networking code for Forge components."
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_network"

[features]
default = ["ipnetwork"]
ipnetwork = ["dep:ipnetwork"]
sqlx = ["dep:sqlx", "dep:ipnetwork"]

[dependencies]
eyre = { workspace = true }
ipnet = { features = ["serde"], workspace = true }
ipnetwork = { workspace = true, features = ["serde"], optional = true }
mac_address = { workspace = true }
serde = { features = ["derive"], workspace = true }
sqlx = { workspace = true, features = [
    "tls-rustls",
    "mac_address",
    "ipnetwork",
    "uuid",
    "migrate",
    "postgres",
    "chrono",
    "macros",
    "json",
], optional = true }
thiserror = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing", default-features = false }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }

[lints]
workspace = true
