#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-rvs"
version = "0.0.1"
description = "Rack Validation Service -- external validation orchestrator for NICo"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_rvs"
path = "src/lib.rs"

[dependencies]
carbide-uuid = { path = "../uuid" }
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
figment = { workspace = true, features = ["toml", "env"] }
uuid = { workspace = true, features = ["v4"] }
logfmt = { path = "../logfmt" }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
jsonpath-rust = { workspace = true }
reqwest = { default-features = false, features = [
  "rustls",
  "stream",
], workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }

[lints]
workspace = true
