#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-secrets"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-support = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
figment = { features = ["env"], workspace = true }
mac_address = { features = ["serde"], workspace = true }
notify = { workspace = true }
opentelemetry = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { features = ["derive"], workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vaultrs = { workspace = true }

# [local-dependencies]
bmc-vendor = { path = "../bmc-vendor" }
carbide-uuid = { path = "../uuid" }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
